--- a/app/src/main/res/layout/email.xml
+++ b/app/src/main/res/layout/email.xml
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:hint="Type your name here"
             android:inputType="textCapWords"
-            android:layout_marginBottom="16dp"/>
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -76,8 +76,9 @@
                 android:layout_height="48dp"
                 android:text="-"
                 android:onClick="decrement"
-                android:layout_marginRight="16dp"
-                />
+                android:layout_marginRight="6dp"
+                android:background="#000000"
+                android:textColor="#ffffff" />
 
 
             <TextView
@@ -95,6 +96,8 @@
                 android:layout_height="48dp"
                 android:layout_marginBottom="16dp"
                 android:text="+"
+                android:background="#000000"
+                android:textColor="#ffffff"
                 android:onClick="increment"
                 android:layout_marginLeft="6dp"
                 />
@@ -108,7 +111,7 @@
             android:layout_height="wrap_content"
             android:text=""
             android:textColor="#000"
-            android:layout_marginBottom="66dp"
+            android:layout_marginBottom="56dp"
             android:textSize="16sp"
 
             />
@@ -120,7 +123,8 @@
             android:text="Send"
             android:onClick="submitOrder"
 
-            />
+            android:background="#000000"
+            android:textColor="#ffffff" />
 
 
 
