--- a/app/src/main/res/layout/car1.xml
+++ b/app/src/main/res/layout/car1.xml
@@ -10,14 +10,15 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#ffffff">
 
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="164dp"
             android:layout_gravity="top"
-            android:src="@drawable/walking">
+            android:src="@drawable/caracteristc">
         </ImageView>
 
 
@@ -32,9 +33,9 @@
                 android:layout_height="48dp"
                 android:layout_marginRight="10dp"
                 android:text=""
-                android:id="@+id/work_s"
-                android:onClick="works"
-                android:background="@drawable/work5" />
+                android:id="@+id/idea_s"
+                android:onClick="ideas"
+                android:background="@drawable/ideaicon" />
 
             <Button
                 android:layout_width="48dp"
@@ -44,7 +45,7 @@
                 android:id="@+id/house_s"
                 android:onClick="houses"
                 android:layout_gravity="center_horizontal"
-                android:background="@drawable/house2" />
+                android:background="@drawable/necessity" />
 
             <Button
                 android:layout_width="48dp"
@@ -54,7 +55,7 @@
                 android:id="@+id/car_s"
                 android:onClick="cars"
                 android:layout_gravity="center_horizontal"
-                android:background="@drawable/walk8" />
+                android:background="@drawable/caracf" />
 
             <Button
                 android:layout_width="48dp"
@@ -64,8 +65,7 @@
                 android:id="@+id/friend_s"
                 android:onClick="friends"
                 android:layout_gravity="center_horizontal"
-                android:background="@drawable/friends5"
-                />
+                android:background="@drawable/remove" />
 
             <Button
                 android:layout_width="48dp"
@@ -74,7 +74,7 @@
                 android:id="@+id/money_s"
                 android:onClick="moneys"
                 android:layout_gravity="center_horizontal"
-                android:background="@drawable/money3" />
+                android:background="@drawable/designi" />
 
 
         </LinearLayout>
@@ -85,7 +85,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:text="‘Better life” is more about living my dream with lots of passion, lots of laughter and love, which of course brings happiness to me. Not a material thing in sight! Even though our definition of what a better life is can change over the years."
+            android:text="3 - When designing your idea, remember to be as detailed as possible . Add the flow as the user will navigate the application, which will have menus as well as all the features that the application intends to have ( even if they are not all implemented immediately in the first version ) . This will help in the development of the tool (which after all can be a split task with a friend or by someone hired for this) so that you can understand - and meet - clearly the expectations for the application."
             />
 
         <Space
