--- a/app/src/main/res/layout/pg1.xml
+++ b/app/src/main/res/layout/pg1.xml
@@ -10,14 +10,15 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#ffffff">
 
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="164dp"
             android:layout_gravity="top"
-            android:src="@drawable/work">
+            android:src="@drawable/ideaa">
         </ImageView>
 
 
@@ -34,7 +35,7 @@
                 android:text=""
                 android:id="@+id/work_s"
                 android:onClick="works"
-                android:background="@drawable/work5" />
+                android:background="@drawable/ideaiconf" />
 
             <Button
                 android:layout_width="48dp"
@@ -44,7 +45,7 @@
                 android:id="@+id/house_s"
                 android:onClick="houses"
                 android:layout_gravity="center_horizontal"
-                android:background="@drawable/house2" />
+                android:background="@drawable/necessity" />
 
             <Button
                 android:layout_width="48dp"
@@ -54,7 +55,7 @@
                 android:id="@+id/car_s"
                 android:onClick="cars"
                 android:layout_gravity="center_horizontal"
-                android:background="@drawable/walk8" />
+                android:background="@drawable/carac" />
 
             <Button
                 android:layout_width="48dp"
@@ -64,8 +65,7 @@
                 android:id="@+id/friend_s"
                 android:onClick="friends"
                 android:layout_gravity="center_horizontal"
-                android:background="@drawable/friends5"
-                />
+                android:background="@drawable/remove" />
 
             <Button
                 android:layout_width="48dp"
@@ -74,7 +74,7 @@
                 android:id="@+id/money_s"
                 android:onClick="moneys"
                 android:layout_gravity="center_horizontal"
-                android:background="@drawable/money3" />
+                android:background="@drawable/designi" />
 
 
         </LinearLayout>
@@ -85,7 +85,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:text="‘Better life” is more about living my dream with lots of passion, lots of laughter and love, which of course brings happiness to me. Not a material thing in sight! Even though our definition of what a better life is can change over the years."
+            android:text="1 - Successful entrepreneurs solve problems in a way that no one could have imagined. When looking around , every product and service we use today were created to solve a problem . So also in real life : those who want to go from one place to another faster, uses a car. To go from one country to another faster, uses an airplane."
             />
 
         <Space
