--- a/app/src/main/res/layout/email.xml
+++ b/app/src/main/res/layout/email.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
-
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,7 +8,6 @@
 
 
     <LinearLayout
-
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -77,7 +75,7 @@
                 android:text="-"
                 android:onClick="decrement"
                 android:layout_marginRight="6dp"
-                android:background="#000000"
+                android:background="@drawable/bfeedback"
                 android:textColor="#ffffff" />
 
 
@@ -96,7 +94,7 @@
                 android:layout_height="48dp"
                 android:layout_marginBottom="16dp"
                 android:text="+"
-                android:background="#000000"
+                android:background="@drawable/bfeedback"
                 android:textColor="#ffffff"
                 android:onClick="increment"
                 android:layout_marginLeft="6dp"
@@ -117,13 +115,13 @@
             />
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="68dp"
+            android:layout_height="48dp"
             android:layout_marginBottom="26dp"
             android:layout_gravity="center"
             android:text="Send"
             android:onClick="submitOrder"
-            android:background="#000000"
+            android:background="@drawable/bfeedback"
             android:textColor="#ffffff" />
 
         <Button
